src/style/index.css
html,
body {
  height: 100vh;
  width: 100vw;
  padding: 0;
  margin: 0;
  background: url("/assets/BG.webp");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  font-family: "SF UI Display Thin";
  font-weight: 500;
  color: #444;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
}

@font-face {
  font-family: "SF UI Display Ultralight";
  font-style: normal;
  font-weight: normal;
  src: local("SF UI Display Ultralight"),
    url("/assets/fonts/sf-ui-display-ultralight-58646b19bf205.woff")
      format("woff");
}

@font-face {
  font-family: "SF UI Display Thin";
  font-style: normal;
  font-weight: normal;
  src: local("SF UI Display Thin"),
    url("/assets/fonts/sf-ui-display-thin-58646e9b26e8b.woff") format("woff");
}

@font-face {
  font-family: "SF UI Display Light";
  font-style: normal;
  font-weight: normal;
  src: local("SF UI Display Light"),
    url("/assets/fonts/sf-ui-display-light-58646b33e0551.woff") format("woff");
}

@font-face {
  font-family: "SF UI Display Medium";
  font-style: normal;
  font-weight: normal;
  src: local("SF UI Display Medium"),
    url("/assets/fonts/sf-ui-display-medium-58646be638f96.woff") format("woff");
}

@font-face {
  font-family: "SF UI Display Semibold";
  font-style: normal;
  font-weight: normal;
  src: local("SF UI Display Semibold"),
    url("/assets/fonts/sf-ui-display-semibold-58646eddcae92.woff")
      format("woff");
}

@font-face {
  font-family: "SF UI Display Bold";
  font-style: normal;
  font-weight: normal;
  src: local("SF UI Display Bold"),
    url("/assets/fonts/sf-ui-display-bold-58646a511e3d9.woff") format("woff");
}

@font-face {
  font-family: "SF UI Display Heavy";
  font-style: normal;
  font-weight: normal;
  src: local("SF UI Display Heavy"),
    url("/assets/fonts/sf-ui-display-heavy-586470160b9e5.woff") format("woff");
}

@font-face {
  font-family: "SF UI Display Black";
  font-style: normal;
  font-weight: normal;
  src: local("SF UI Display Black"),
    url("/assets/fonts/sf-ui-display-black-58646a6b80d5a.woff") format("woff");
}

#app {
  height: 100%;
}
#table-container {
  width: 85%;
  height: 90%;
  background: rgba(255, 255, 255, 0.1);
  backdrop-filter: blur(40px);
  border: 1px solid #ffffff4b;
  border-radius: 25px;
  padding: 2rem 1.5rem 1rem 1.5rem;
  display: flex;
  flex-direction: column;
}
.subject-name.mini {
  display: none;
}
@media only screen and (max-width: 768px) and (orientation:portrait) {
  .table {
    height: 200% !important;
  }
  div.table-row {
    width: 28% !important;
    min-width: 28% !important;
  }
  .timetable {
    overflow-y: auto;
  }
  div.subject-content {
    display: flex !important;
    height: 100%;
  }
  .subject-name.mini {
    display: flex;
    flex-flow: column-reverse !important;
    word-wrap: break-word;
  }
  .subject-name {
    display: none;
  }
}
@media only screen and (max-width: 1023px) {
  .table-container-head {
    flex-wrap: wrap;
    height: 15% !important;
  }
  .table-head-title {
    width: 100%;
    justify-content: center;
    align-items: center;
    display: flex;
    padding-bottom: 1rem;
  }
  .table-head-select {
    display: flex;
    width: 100% !important;
    justify-content: center;
  }
  .table-head-select select {
    min-width: 320px;
    width: 55% !important;
  }
  .table {
    flex-direction: row !important;
  }
  .table-row-head {
    width: 9% !important;
    height: 100% !important;
    flex-direction: column !important;
    margin-right: 1rem!important;
  }
  .table-head-left {
    width: 100% !important;
  }
  .table-row {
    width: 13% !important;
    height: 100% !important;
    flex-direction: column !important;
  }
  .table-row-left {
    width: 100% !important;
    display: flex;
    justify-content: center;
  }
  .table-col {
    width: 100% !important;
  }
  .table-head-col {
    width: 100% !important;
  }
  .table-head-left {
    width: 100% !important;
  }
  .linerow {
    flex-direction: column;
  }
  .linerowhead {
    width: 100% !important;
  }
  .line {
    width: 100% !important;
    border-top: 1px solid rgba(255, 255, 255, 0.05);
  }
  .subject {
    flex-direction: column;
    padding-top: 0.15rem;
    padding-right: 0.5rem;
    padding-bottom: 0.1rem;
  }
  .subject-grip {
    height: 7px;
    width: 100%;
    border-radius: 5px 5px 0px 0px;
  }
  .subject-content {
    font-size: 0.6rem;
    overflow: auto;
    border-radius: 0px 0px 5px 5px;
  }
  .subject-name {
    word-wrap: break-word;
  }
}
@media only screen and (min-width: 1024px) {
  .table {
    flex-direction: column;
  }
  .table-row-head {
    height: 9% !important;
  }
  .table-row {
    height: 13% !important;
  }
  .table-row-left {
    height: 100% !important;
  }
  .table-head-left {
    height: 100% !important;
  }
  .table-head-col {
    height: 100% !important;
  }
  .table-col {
    height: 100% !important;
  }
  .linerow {
    flex-direction: row;
  }
  .linerowhead {
    height: 100% !important;
  }
  .line {
    height: 100% !important;
    border-left: 1px solid rgba(255, 255, 255, 0.05);
  }
  .subject {
    padding-left: 0.15rem;
    padding-right: 0.1rem;
    padding-bottom: 0.5rem;
  }
  .subject-grip {
    width: 7px;
    border-radius: 5px 0px 0px 5px;
  }
  .subject-content {
    overflow: auto;
    border-radius: 0px 5px 5px 0px;
  }
}
.table-container-head {
  display: flex;
  justify-content: space-between;
  padding-bottom: 2rem;
  height: 10%;
}
.table-head-title {
  font-family: "SF UI Display Medium";
  font-style: normal;
  font-weight: 500;
  font-size: 1.2rem;
  color: #ff6d3f;
}
.table-head-title .white {
  color: #fff;
}
.table-head-select {
  width: 15%;
}
.table-head-select select {
  background: rgba(0, 0, 0, 0.4);
  backdrop-filter: blur(100px);
  border-radius: 10px;
  border: none;
  padding: 0.5rem 0.75rem;
  color: #fff;
  width: 100%;
  outline: none;
  -webkit-appearance: none;
  background-image: url("/assets/icons/expand_more_24px.png");
  background-repeat: no-repeat;
  background-position-x: right;
  background-size: 12px;
  background-origin: content-box, padding-box;
  background-position-y: center;
}
.table-head-select select::after {
  width: 25px;
  height: 25px;
}
.timetable {
  flex: 1;
  display: flex;
  width: 100%;
  height: 90%;
}
.table {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}
.table-row-head {
  display: flex;
  font-size: 0.8rem;
}
.table-row {
  display: flex;
  position: relative;
}
.table-row-left {
  color: white;
  font-size: 0.8rem;
}
.table-head-col {
  color: white;
}
.table-col {
  color: white;
}

.subject {
  width: 100%;
  display: flex;
  height: 100%;
}

.subject-grip {
  background: #ff6d3f;
}

.subject-content {
  background: rgba(0, 0, 0, 0.4);
  flex: 1;
  padding: 0.5rem 0.75rem;
  display: flex;
  flex-direction: column;
}
.subject-time {
  font-size: 0.4rem;
  padding-bottom: 0.35rem;
  font-weight: 400;
}
.subject-time .subject-room {
  color: #ff6d3f;
  font-weight: 600;
}
.subject-name {
  font-weight: bold;
  font-size: 0.75rem;
}
.linerow {
  position: absolute;
  height: 100%;
  width: 100%;
  display: flex;
  z-index: -1;
}

